# procraft-dev

./: .gitignore  CLAUDE.md  DESIGN_JOURNAL.md  IMPLEMENTATION.md  ProCraft_short.md  prop_timbre_factorized_003.md  pyproject.toml
configs/: paths.py
demo/: index.html  manifest.json
docs/: index.html  manifest.json
docs/midi/: case_01_Track00001_modified.mid  case_01_Track00001_original.mid  case_01_Track00007_modified.mid  case_01_Track00016_modified.mid  case_01_Track00016_original.mid  case_01_Track00020_modified.mid  case_01_Track00020_original.mid  case_02_Track00002_modified.mid  case_02_Track00009_modified.mid  case_02_Track00009_original.mid  case_02_Track00017_modified.mid  case_03_Track00003_modified.mid  case_03_Track00003_original.mid  case_03_Track00008_modified.mid  case_03_Track00011_modified.mid  case_03_Track00015_modified.mid  case_03_Track00019_original.mid  case_04_Track00002_modified.mid  case_04_Track00004_modified.mid  case_04_Track00004_original.mid  case_04_Track00011_modified.mid  case_04_Track00011_original.mid  case_04_Track00012_modified.mid  case_04_Track00012_original.mid  (+30 more)
procraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
procraft_data/: __init__.py
scripts/: apply_tool_calls_to_track.py  build_demo.py  compare_soundfonts.py  dump_tool_schemas.py  generate_lakh.py  ingest_babyslakh_all.py  ingest_slakh_track.py  lakh_sanity_filter.py  regenerate_failures.py  scan_dataset.py  serve_qwen3.sh  smoke_qwen_all_motivations.py  smoke_test_pipeline.py
tests/: test_schemas_and_executors.py  test_trace_prompts.py
(+17 files in other folders)
